# CLARITY

./: Cargo.toml  example.toml
src/: configuration.rs  editor.rs  get_dirs.rs  get_input.rs  main.rs  notifications.rs  setup.rs  watch.rs
